STERI016-423: Fix offer card bottom alignment (#833)

--- a/blocks/offer-box/offer-box.css
+++ b/blocks/offer-box/offer-box.css
@@ -18,8 +18,10 @@
 }
 
 .offer-box .offer-box-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   text-align: center;
-  margin-bottom: 24px;
 }
 
 .offer-box .offer-box-header h1,
@@ -131,6 +133,16 @@
 }
 
 /* Alternate styles */
+.offer-box.offer-box.alternate-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.offer-box.alternate-1 .offer-box-header .placeholder-badge {
+  padding: 25px 16px;
+}
+
 .offer-box.alternate-2 div.offer-box-row {
   padding: 16px;
   gap: 16px;
